themes/ovh/static/css/main.css
@charset "UTF-8";
/**
 * Foundation for Sites by ZURB
 * Version 6.2.4
 * foundation.zurb.com
 * Licensed under MIT Open Source
 */
.hll {
  background-color: #eee; }

.c {
  color: #408090;
  font-style: italic; }

.err {
  border: 1px solid #FF0000; }

.k {
  color: #007020;
  font-weight: bold; }

.o {
  color: #666666; }

.cm {
  color: #408090;
  font-style: italic; }

.cp {
  color: #007020; }

.c1 {
  color: #408090;
  font-style: italic; }

.cs {
  background-color: #FFF0F0;
  color: #408090; }

.gd {
  color: #A00000; }

.ge {
  font-style: italic; }

.gr {
  color: #FF0000; }

.gh {
  color: #000080;
  font-weight: bold; }

.gi {
  color: #00A000; }

.go {
  color: #303030; }

.gp {
  color: #C65D09;
  font-weight: bold; }

.gs {
  font-weight: bold; }

.gu {
  color: #800080;
  font-weight: bold; }

.gt {
  color: #0040D0; }

.kc {
  color: #007020;
  font-weight: bold; }

.kd {
  color: #007020;
  font-weight: bold; }

.kn {
  color: #007020;
  font-weight: bold; }

.kp {
  color: #007020; }

.kr {
  color: #007020;
  font-weight: bold; }

.kt {
  color: #902000; }

.m {
  color: #208050; }

.s {
  color: #4070A0; }

.na {
  color: #4070A0; }

.nb {
  color: #007020; }

.nc {
  color: #0E84B5;
  font-weight: bold; }

.no {
  color: #60ADD5; }

.nd {
  color: #555555;
  font-weight: bold; }

.ni {
  color: #D55537;
  font-weight: bold; }

.ne {
  color: #007020; }

.nf {
  color: #06287E; }

.nl {
  color: #002070;
  font-weight: bold; }

.nn {
  color: #0E84B5;
  font-weight: bold; }

.nt {
  color: #062873;
  font-weight: bold; }

.nv {
  color: #BB60D5; }

.ow {
  color: #007020;
  font-weight: bold; }

.w {
  color: #BBBBBB; }

.mf {
  color: #208050; }

.mh {
  color: #208050; }

.mi {
  color: #208050; }

.mo {
  color: #208050; }

.sb {
  color: #4070A0; }

.sc {
  color: #4070A0; }

.sd {
  color: #4070A0;
  font-style: italic; }

.s2 {
  color: #4070A0; }

.se {
  color: #4070A0;
  font-weight: bold; }

.sh {
  color: #4070A0; }

.si {
  color: #70A0D0;
  font-style: italic; }

.sx {
  color: #C65D09; }

.sr {
  color: #235388; }

.s1 {
  color: #4070A0; }

.ss {
  color: #517918; }

.bp {
  color: #007020; }

.vc {
  color: #BB60D5; }

.vg {
  color: #BB60D5; }

.vi {
  color: #BB60D5; }

.il {
  color: #208050; }

.highlighttable {
  font-family: 'Lucida Console', Monaco, monospace;
  font-size: 0.8em; }

.highlighttable .code {
  background: #130A10; }

.highlighttable .linenos {
  background: #191317;
  color: #565054;
  width: 55px;
  text-align: right; }

.highlight pre {
  color: #d0d0c6; }

.highlight .hll {
  display: block;
  background-color: #111; }

.highlight .c {
  color: #75715e; }

/* Comment */
.highlight .err {
  color: #960050;
  background-color: #1e0010; }

/* Error */
.highlight .k {
  color: #66d9ef; }

/* Keyword */
.highlight .l {
  color: #ae81ff; }

/* Literal */
.highlight .n {
  color: #f8f8f2; }

/* Name */
.highlight .o {
  color: #f92672; }

/* Operator */
.highlight .p {
  color: #f8f8f2; }

/* Punctuation */
.highlight .cm {
  color: #75715e; }

/* Comment.Multiline */
.highlight .cp {
  color: #75715e; }

/* Comment.Preproc */
.highlight .c1 {
  color: #75715e; }

/* Comment.Single */
.highlight .cs {
  color: #75715e; }

/* Comment.Special */
.highlight .ge {
  font-style: italic; }

/* Generic.Emph */
.highlight .gs {
  font-weight: bold; }

/* Generic.Strong */
.highlight .kc {
  color: #66d9ef; }

/* Keyword.Constant */
.highlight .kd {
  color: #66d9ef; }

/* Keyword.Declaration */
.highlight .kn {
  color: #f92672; }

/* Keyword.Namespace */
.highlight .kp {
  color: #66d9ef; }

/* Keyword.Pseudo */
.highlight .kr {
  color: #66d9ef; }

/* Keyword.Reserved */
.highlight .kt {
  color: #66d9ef; }

/* Keyword.Type */
.highlight .ld {
  color: #e6db74; }

/* Literal.Date */
.highlight .m {
  color: #ae81ff; }

/* Literal.Number */
.highlight .s {
  color: #e6db74; }

/* Literal.String */
.highlight .na {
  color: #a6e22e; }

/* Name.Attribute */
.highlight .nb {
  color: #f8f8f2; }

/* Name.Builtin */
.highlight .nc {
  color: #a6e22e; }

/* Name.Class */
.highlight .no {
  color: #66d9ef; }

/* Name.Constant */
.highlight .nd {
  color: #a6e22e; }

/* Name.Decorator */
.highlight .ni {
  color: #f8f8f2; }

/* Name.Entity */
.highlight .ne {
  color: #a6e22e; }

/* Name.Exception */
.highlight .nf {
  color: #a6e22e; }

/* Name.Function */
.highlight .nl {
  color: #f8f8f2; }

/* Name.Label */
.highlight .nn {
  color: #f8f8f2; }

/* Name.Namespace */
.highlight .nx {
  color: #a6e22e; }

/* Name.Other */
.highlight .py {
  color: #f8f8f2; }

/* Name.Property */
.highlight .nt {
  color: #f92672; }

/* Name.Tag */
.highlight .nv {
  color: #f8f8f2; }

/* Name.Variable */
.highlight .ow {
  color: #f92672; }

/* Operator.Word */
.highlight .w {
  color: #f8f8f2; }

/* Text.Whitespace */
.highlight .mf {
  color: #ae81ff; }

/* Literal.Number.Float */
.highlight .mh {
  color: #ae81ff; }

/* Literal.Number.Hex */
.highlight .mi {
  color: #ae81ff; }

/* Literal.Number.Integer */
.highlight .mo {
  color: #ae81ff; }

/* Literal.Number.Oct */
.highlight .sb {
  color: #e6db74; }

/* Literal.String.Backtick */
.highlight .sc {
  color: #e6db74; }

/* Literal.String.Char */
.highlight .sd {
  color: #e6db74; }

/* Literal.String.Doc */
.highlight .s2 {
  color: #e6db74; }

/* Literal.String.Double */
.highlight .se {
  color: #ae81ff; }

/* Literal.String.Escape */
.highlight .sh {
  color: #e6db74; }

/* Literal.String.Heredoc */
.highlight .si {
  color: #e6db74; }

/* Literal.String.Interpol */
.highlight .sx {
  color: #e6db74; }

/* Literal.String.Other */
.highlight .sr {
  color: #e6db74; }

/* Literal.String.Regex */
.highlight .s1 {
  color: #e6db74; }

/* Literal.String.Single */
.highlight .ss {
  color: #e6db74; }

/* Literal.String.Symbol */
.highlight .bp {
  color: #f8f8f2; }

/* Name.Builtin.Pseudo */
.highlight .vc {
  color: #f8f8f2; }

/* Name.Variable.Class */
.highlight .vg {
  color: #f8f8f2; }
/* ... */

